Move to .html instead of /index.html based files

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -8,19 +8,19 @@
   <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
     <p>
       Rust is a community project and is very thankful for the many community
-      contributions it receives. <a href="about">See this page for more
+      contributions it receives. <a href="/about.html">See this page for more
         information</a>.
     </p>
     <p>Here's a list of Rust releases; click the name to see a list of contributors for that release.</p>
 
     <table class="post-list collapse w-100 f2-l f2-m f3-s">
       <tr>
-        <td class="bn"><a href="/rust/all-time">All time</a></td>
+        <td class="bn"><a href="/all-time.html">All time</a></td>
       </tr>
 
       {{#each releases as |release| }}
       <tr>
-        <td class="bn"><a href="/rust/{{release}}">{{release}}</a></td>
+        <td class="bn"><a href="/{{release}}.html">{{release}}</a></td>
       </tr>
       {{/each}}
     </table>
