add page titles

--- a/templates/container.hbs
+++ b/templates/container.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Rust Contributors</title>
+    <title>{{common.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- styles -->
@@ -27,7 +27,7 @@
         <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
             <a href="/">
                 <img class="v-mid ml0-l" alt="Rust Logo" src="/images/rust-logo-blk.svg">
-                {{#if show_thanks_in_logo}}
+                {{#if common.show_thanks_in_logo}}
                 <span class="dib ml1 ml0-l">Rust Thanks</span>
                 {{/if}}
             </a>
