remove index.html from URLs

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -8,7 +8,7 @@
     <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
         <p>
             Rust is a community project and is very thankful for the many community
-            contributions it receives. <a href="/about/index.html">See this page for more
+            contributions it receives. <a href="/about/">See this page for more
             information</a>.
         </p>
 
