Point out .mailmap to people who want to update their names

--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -32,7 +32,9 @@
             if it's okay to publicly discuss, or
             <a href="mailto:release@rust-lang.org">email the release team</a>
             if you'd prefer to be more discreet. We are happy to remove or
-            make edits where appropriate.
+            make edits where appropriate. You can also submit a pull request to
+            update the <code>.mailmap</code> file in the <a
+            href="https://github.com/rust-lang/rust/">Rust repository</a>.
         </p>
     </div>
 </section>
