Parse reviewer information and include it

--- a/templates/stats.hbs
+++ b/templates/stats.hbs
@@ -21,7 +21,7 @@
                 <tr>
                     <th>Rank</th>
                     <th>Name</th>
-                    <th>Commits</th>
+                    <th>Contributions</th>
                 </tr>
             </thead>
             <tbody>
