Update about page with information about reviews

--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -12,11 +12,11 @@
             project</a>.
         </p>
         <p>
-            Currently, we are only tracking commits to
+            Currently, we are only tracking commits and reviews to
             <code>rust-lang/rust</code> and most of the related submodules. In
-            the future, we have plans to add commit tracking for more
+            the future, we have plans to add tracking for more
             repositories under the Rust project generally, and possibly even
-            tracking other kinds of contributions than commits, as they're also
+            tracking other kinds of contributions, as they're also
             important!
         </p>
         <p>
