Change front page to contributions

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -20,7 +20,7 @@
                     <b>{{people}}</b> people
                 </div>
                 <div>
-                    <b>{{commits}}</b> commits
+                    <b>{{commits}}</b> contributions
                 </div>
             </a>
             {{/each}}
