--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -1,4 +1,5 @@
 {{#*inline "content"}}
+<!-- header -->
 <header class="mv3 mb4-ns">
     <div class="w-100 mw-none ph3 mw8-m mw9-l center">
         <h1>About</h1>
